Clean html documents

--- a/task1.html
+++ b/task1.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Лабораторна №3</title>
+    <title>Завдання 1</title>
     <link href="task1.css" rel="stylesheet" />
 </head>
 <body>
@@ -26,9 +26,6 @@
             <p>Source: <a href="https://imgur.com/gallery/XSqQoIH">https://imgur.com/gallery/XSqQoIH</a></p>
         </div>
     </div>
-</div>
-<div>
-
 </div>
 </body>
 </html>
